--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@nuxt/content": "^2.12.0",
     "@nuxtjs/color-mode": "^3.3.2",
-    "@nuxtjs/tailwindcss": "^6.11.4"
+    "@nuxtjs/tailwindcss": "^6.11.4",
+    "@tailwindcss/typography": "^0.5.10"
   }
 }
