--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.6",
     "@heroicons/vue": "^2.1.1",
     "nuxt": "^3.10.3",
+    "tw-elements": "^2.0.0",
     "vue": "^3.4.19",
     "vue-router": "^4.3.0"
   },
